doc: doc test change
* doc test change

Signed-off-by: Sebastian Wezel <sebastian.wezel@nordicsemi.no>

--- a/doc/nrf/404.rst
+++ b/doc/nrf/404.rst
@@ -11,5 +11,6 @@ If you were directed to this page through an external link, try doing a search -
 
 If you switched between different versions of the documentation, the content might not exist in this version.
 
+This is a doc test change
 
 :ref:`Go to the start page. <index>`
